# graphrag-recommendation-engine

./: Dockerfile  README.md  graph_engine.py  pyproject.toml
tests/: test_graph.py
